# x402-agents

./: .gitignore  README.md  WHITEPAPER.md  glama.json
.github/workflows/: beacon-actionability.yml  beacon-deploy-registry.yml  beacon-enrich.yml  beacon-indexer.yml  beacon-indexnow.yml  beacon-manifest-scan.yml  beacon-multicrawl.yml  beacon-ops-digest.yml  beacon-outreach-watch.yml
agents/beacon-poster/: package-lock.json  package.json
agents/compliance-check/: package-lock.json  package.json  vercel.json
agents/data-feed/: package-lock.json  package.json
drafts/: BLOG_POST.md  DIRECTORY_SUBMISSIONS.md  DIRECTORY_SUBMIT.md  LAUNCH.md  LAUNCH_KIT.md  ORGANIC_VOLUME_ENGINE.md  PUBLISH_CHECKLIST.md  SUBMIT_NOW.md  awesome-x402-pr.md
portal/: ANALYTICS.md  generate_seo.py  index.html  package-lock.json  package.json  vercel.json
registry/: .env.example  .gitignore  README.md  agent_app.py  analytics.py  beacon_auto_inject.py  beacon_langchain_plugin.py  beacon_ops.py  beacon_sdk.py  enrich_github.py  main.py  multi_source_crawler.py  package.json  plugin_auto_loader.ts  railway.json  render.yaml  requirements.txt  run_beacon.py  scraper_agent.py  seo.py  trending.py  turso.py  usage.py  vercel.json
scripts/: deploy_from_local.sh  export_turso_backup.sh  gcp_deploy.sh  gcp_deploy_nosudo.sh  hotfix_deploy_registry.sh  import_db_file.sh  import_sqlite.sh  outreach-prs.json  run_full_migration.sh  start-beacon.sh
sdk/beacon-agent/: README.md  pyproject.toml
sdk/beacon-agent/beacon_agent/: __init__.py  auto_inject.py  client.py
templates/: beacon.cursorrules
(+77 files in other folders)
